# swagger/swagger.json
@@ -3,32 +3,28 @@
   "info": {
     "description": "",
     "version": "2",
-    "title": "Bank"
+    "title": "CS_MVC"
   },
   "host": "localhost:3000",
   "tags": [
     {
-      "name": "Deposit"
+      "name": "Login"
     },
     {
-      "name": "Withdraw"
-    },
-    {
-      "name": "Transfer"
+      "name": "Report"
     }
   ],
   "schemes": [
     "http"
   ],
   "paths": {
-    "/Deposit": {
+    "/Login": {
       "post": {
         "tags": [
-          "Deposit"
+          "Login"
         ],
-        "summary": "Deposit money to wallet",
-        "description": "Deposit money to wallet",
-        "operationId": "Deposit money to wallet",
+        "summary": "เข้าสู่ระบบ",
+        "description": "เข้าสู่ระบบ",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -37,28 +33,20 @@
         ],
         "parameters": [
           {
-            "name": "acount",
+            "name": "id",
             "in": "formData",
-            "description": "Acount Owner",
+            "description": "อีเมลล์สถาบัน",
             "required": true,
             "type": "string",
-            "default": "2562-34-21-10001"
+            "default": "61050190@cskmitl.ac.th"
           },
           {
-            "name": "acount_id",
+            "name": "password",
             "in": "formData",
-            "description": "password to access acount",
+            "description": "รหัสผ่าน",
             "required": true,
             "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "deposit",
-            "in": "formData",
-            "description": "amount of money you want to deposit",
-            "required": true,
-            "type": "integer",
-            "default": 1000
+            "default": "000000"
           }
         ],
         "responses": {
@@ -72,37 +60,7 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Deposit Success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 400
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
+                  "example": null
                 }
               }
             }
@@ -110,44 +68,18 @@
         }
       }
     },
-    "/Withdraw": {
+    "/Report": {
       "post": {
         "tags": [
-          "Withdraw"
+          "Report"
         ],
-        "summary": "Withdraw money from wallet",
-        "description": "Withdraw money from wallet",
+        "summary": "แสดงรายงานการเข้าสู่ระบบ",
+        "description": "แสดงรายงานการเข้าสู่ระบบ",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
         "produces": [
           "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "acount",
-            "in": "formData",
-            "description": "Acount Owner",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10001"
-          },
-          {
-            "name": "acount_id",
-            "in": "formData",
-            "description": "password to access acount",
-            "required": true,
-            "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "withdraw",
-            "in": "formData",
-            "description": "amount of money you want to withdraw",
-            "required": true,
-            "type": "integer",
-            "default": 1000
-          }
         ],
         "responses": {
           "200": {
@@ -160,133 +92,7 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Withdraw Success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 400
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/Transfer": {
-      "post": {
-        "tags": [
-          "Transfer"
-        ],
-        "summary": "Transfer money from wallet to another wallet",
-        "description": "Transfer money from wallet to another wallet",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "acount",
-            "in": "formData",
-            "description": "Acount Owner",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10001"
-          },
-          {
-            "name": "acount_id",
-            "in": "formData",
-            "description": "password to access acount",
-            "required": true,
-            "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "transfer",
-            "in": "formData",
-            "description": "amount of money you want to transfer",
-            "required": true,
-            "type": "integer",
-            "default": 1000
-          },
-          {
-            "name": "sendto",
-            "in": "formData",
-            "description": "Acount Reciver",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10003"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Created",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 200
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Transfer Success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 400
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
+                  "example": null
                 }
               }
             }
